<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:scrollbars="vertical"

    tools:context="com.example.korisnik.todooo.HelpActivity"
    android:weightSum="1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollIndicators="right">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <include
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                layout="@layout/toolbar_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <TextView
                    android:id="@+id/helpTitle"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textColor="@color/black"
                    android:text="@string/helpTitle"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <ImageView
                    android:id="@+id/bullet"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/teze"
                    />
                <TextView
                    android:id="@+id/help1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    android:text="@string/help1"
                    />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/siva">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp">
                <ImageView
                    android:id="@+id/bullet2"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/teze"
                    />
                <TextView
                    android:id="@+id/help2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    android:text="@string/help2"
                    />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/siva">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp">
                <ImageView
                    android:id="@+id/bullet3"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/teze"
                    />
                <TextView
                    android:id="@+id/help3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    android:text="@string/help3"
                    />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/siva">
            </View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp">
                <ImageView
                    android:id="@+id/bullet4"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/teze"
                    />
                <TextView
                    android:id="@+id/help4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    android:text="@string/help4"
                    />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/siva">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp">
                <ImageView
                    android:id="@+id/bullet5"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/teze"
                    />
                <TextView
                    android:id="@+id/help5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:maxLines="5"
                    android:textColor="@color/black"
                    android:text="@string/help5"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="47dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:id="@+id/bullet8"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/highpriority"
                    />
                <TextView
                    android:id="@+id/help8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:maxLines="5"
                    android:textColor="@color/black"
                    android:text="@string/help6"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="47dp"
                android:layout_marginTop="5dp">
                <ImageView
                    android:id="@+id/bullet9"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/mediumpriority"
                    />
                <TextView
                    android:id="@+id/help9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:maxLines="5"
                    android:textColor="@color/black"
                    android:text="@string/help7"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="47dp"
                android:layout_marginTop="5dp">
                <ImageView
                    android:id="@+id/bullet10"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/lowpriority"
                    />
                <TextView
                    android:id="@+id/help10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:maxLines="5"
                    android:textColor="@color/black"
                    android:text="@string/help8"
                    />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/siva">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp">
                <ImageView
                    android:id="@+id/bullet6"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/teze"
                    />
                <TextView
                    android:id="@+id/help6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:maxLines="5"
                    android:textColor="@color/black"
                    android:text="@string/help9"
                    />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/siva">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp">
                <ImageView
                    android:id="@+id/bullet7"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/teze"
                    />
                <TextView
                    android:id="@+id/help7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:maxLines="5"
                    android:textColor="@color/black"
                    android:text="@string/help10"
                    />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/siva">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp">
                <ImageView
                    android:id="@+id/bullet11"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/teze"
                    />
                <TextView
                    android:id="@+id/help11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:maxLines="5"
                    android:textColor="@color/black"
                    android:text="@string/help11"
                    />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/siva">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp">
                <TextView
                    android:id="@+id/help12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    android:text="@string/help12"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/navigation_view"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/navigation_drawer_header"
        ></android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

